--- a/ios/Podfile
+++ b/ios/Podfile
@@ -12,6 +12,8 @@ target 'moodiApp' do
     :hermes_enabled => false
   )
 
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
   target 'moodiAppTests' do
     inherit! :complete
     # Pods for testing
@@ -21,9 +23,8 @@ target 'moodiApp' do
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable the next line.
-  use_flipper!()
-
-  post_install do |installer|
-    react_native_post_install(installer)
-  end
+  # use_flipper!({ 'Flipper-Folly' => '2.3.0'})
+  # post_install do |installer|
+  #   flipper_post_install(installer)
+  # end
 end
