--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
     "axios": "^0.21.1",
+    "convert-excel-to-json": "^1.7.0",
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-animatable": "^1.3.3",
